feat: added compensation implementation - fixed some bugs - updated samples - added more tests of workflows. - updated libraries - updarted samples