@@ -1,8 +1,14 @@
 package co.orquex.sagas.spring.framework.config;
 
+import co.orquex.sagas.core.compensation.DefaultCompensationExecutor;
 import co.orquex.sagas.core.flow.WorkflowExecutor;
+import co.orquex.sagas.domain.api.CompensationExecutor;
 import co.orquex.sagas.domain.api.StageExecutor;
+import co.orquex.sagas.domain.api.TaskExecutor;
+import co.orquex.sagas.domain.api.registry.Registry;
+import co.orquex.sagas.domain.api.repository.CompensationRepository;
 import co.orquex.sagas.domain.api.repository.FlowRepository;
+import co.orquex.sagas.domain.api.repository.TaskRepository;
 import co.orquex.sagas.domain.api.repository.TransactionRepository;
 import co.orquex.sagas.spring.framework.config.annotation.ConditionalOnMissingBean;
 import java.util.concurrent.ExecutorService;
@@ -20,14 +26,29 @@ public class SagasWorkflowConfiguration {
       final FlowRepository flowRepository,
       final TransactionRepository transactionRepository,
       @Qualifier("defaultStageExecutor") final StageExecutor defaultStageExecutor,
+      final CompensationExecutor compensationExecutor,
       final ExecutorService workflowExecutorService) {
     return new WorkflowExecutor(
-        flowRepository, transactionRepository, defaultStageExecutor, workflowExecutorService);
+        flowRepository,
+        transactionRepository,
+        defaultStageExecutor,
+        compensationExecutor,
+        workflowExecutorService);
+  }
+
+  @Bean
+  public CompensationExecutor defaultCompensationExecutor(
+      final Registry<TaskExecutor> taskExecutorRegistry,
+      final TaskRepository taskRepository,
+      final CompensationRepository compensationRepository) {
+    return new DefaultCompensationExecutor(
+        taskExecutorRegistry, taskRepository, compensationRepository);
   }
 
   @Bean
   @ConditionalOnMissingBean(name = {"workflowExecutorService"})
   public ExecutorService workflowExecutorService() {
-    return Executors.newFixedThreadPool(10, r -> new Thread(r, "workflow-executor-"));
+    final var threadFactory = Thread.ofPlatform().name("workflow-executor-", 0).factory();
+    return Executors.newFixedThreadPool(10, threadFactory);
   }
 }
